styles/index.css
* {
    box-sizing: border-box;
    font-family: Helvetica;
  }

.col-1 {width: 8.33%;}
.col-2 {width: 16.66%; }
.col-3 {width: 25%; }
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}

.center_columns{
    padding:5pt;
    /* margin-left: 25%; */
    text-align: center;
    vertical-align: middle;
}
.tempText{
    color: gray;
}
.headersText{
    color: white;
    font-size: 3rem;
}
.headersText h1{
    color: white;

}
.formatBoxes{
    border-radius: 20px ;
}
.textRed{
    color: red;
}
#mainCover{
    /* width: 100%; */
    /* background-image: url("/assets/sky.jpeg"); */
    background: linear-gradient(to bottom, rgb(9, 47, 73),rgb(32, 108, 158),
        rgb(87, 139, 187),hsl(204, 47%, 52%),rgb(88, 174, 214),rgb(141, 199, 209),
        rgb(86, 179, 207),
        rgb(228, 210, 131),
        rgb(224, 218, 162),
        rgb(235, 228, 172),
        rgb(236, 221, 106),
        rgb(231, 196, 99));
    /* background-color:rgb(153, 219, 245);
    /* background: no-repeat; */
    /* height: 100vh; */
    font-size: 2rem;
    color:gray;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
    padding: 15px 0 3px 0;
    margin: 5px 1px 3px 0;
    border: 1px solid #424242;
    border: 1px solid rgba(66, 66, 66, 0.25);
}   
#headerImage{
    top: 10px;
    position: relative;  
}
h1 {
    color: white;

}
h2{
    color:lightseagreen
}
p {
    color: white;
    font-size: 3rem;
}
#landscapeImage{
    background-image: url(../assets/landscapes/sunny.jpeg);
    width:100%;
    height: 100%;
    max-height: 200px;
}
.box{
    /* background:transparent */
    color:lightseagreen;
}
.garden{
    display: flex;
    /* vertical-align: top; */
    height: 5em;
    background-color:transparent;
    /* margin-left: 25%; */
    margin-top: 5%;
    
}
#footer{
    background-color: white;
    
    align-items: center;
    padding-bottom:1%;
    margin-top: 1%;
    /* margin-bottom: 0%; */
}
.footer-text{
    font-size: 0.8rem;
    text-align: justify;
    padding:4pt;
    text-indent:45%;
}

.city-input{
    position:relative;
    left:15%;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
}
#input-city{
    color:gray;
    font-size: 1.5rem;

}

#selectSky{
    position:relative;
    right:-200%;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
    font-size: 2rem;

}
.container {
    /* padding:1rem; */
    display: flex;
    overflow:auto;
    /* background-color: thistle; */
    /* height: 10%; */
    
}

.noClass{
    display: flex;
    /* vertical-align: baseline;
    position: relative; */
    margin-left: 15%;
    width: 5.5em;
    height: 5em;
    padding: 2rem;
    text-align:center;
    font-size: 5rem;
    clear: both;
    background-color: white;
    align-content: center;
    border-top: 3px solid #424242;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
}
.item{
    margin-left:20%;
    float:left;
    
}
.rainyMode{
    display: flex;
    margin-left: 15%;
    width: 5.5em;
    height: 5em;
    padding: 2rem;
    text-align:center;
    font-size: 5rem;
    clear: both;
    /* background-color: blue; */
    background-image: url(../assets/landscapes/rainy.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
    align-content: center;
    border-top: 3px solid #424242;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
}
.sunnyMode{
    display: flex;
    /* vertical-align: baseline;
    position: relative; */
    margin-left: 14.5%;
    width: 5.5em;
    height: 5em;
    padding-left: 3rem;
    padding-top: 2em;
    text-align:center;
    font-size: 5rem;
    clear: both;
    background-image: url(../assets/landscapes/sunny.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
    align-content: center;
    border-top: 3px solid #424242;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
}
.snowyMode{
    display: flex;
    margin-left: 15%;
    width: 5.5em;
    height: 5em;
    padding: 2rem;
    text-align:center;
    font-size: 5rem;
    clear: both;
    background-image: url(../assets/landscapes/snow.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
    align-content: center;
    border-top: 3px solid #424242;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
}
.cloudyMode{
    display: flex;
    margin-left: 15%;
    width: 5.5em;
    height: 5em;
    padding: 2rem;
    text-align:center;
    font-size: 5rem;
    clear: both;
    background-image: url(../assets/landscapes/cloudy.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
    align-content: center;
    border-top: 3px solid #424242;
    box-shadow: 2px 2px 5px 2px rgba(66, 66, 66, 0.6);
}
/* #landScape{
    background-image: url(../assets/landscapes/sunny.jpeg);
    background-repeat: no-repeat;
    background-size: 7rem;
} */
#temp-adjust{
    font-size: 3rem;
    /* white-space:pre-wrap; */

}
.changeTempButton{
    width: 6rem;
    height: 4rem;
    /* font-size: 30px; */
    background-color:transparent;
    color:white;
    font-size: 3rem;
    border: transparent;
}


  
/*apply hover effect to button tag*/
  
/* button:hover {
    background-color: yellow;
    color: grey;
} */

